java: ban JUnit 5 assertions and migrate to AssertJ